--- a/app/Resources/views/course_info/presentation/presentation.html.twig
+++ b/app/Resources/views/course_info/presentation/presentation.html.twig
@@ -8,9 +8,9 @@
     >
         <div class="card-header">
             <div class="d-flex justify-content-between">
-                <h3>Général</h3>
+                <h3>Informations générales</h3>
                 <button type="button" class="edit-button btn btn-primary rounded">
-                    Mettre à jour
+                    Editer
                 </button>
             </div>
         </div>
@@ -43,7 +43,7 @@
             <div class="d-flex justify-content-between">
                 <h3>Mode d'enseignement</h3>
                 <button type="button" class="edit-button btn btn-primary rounded">
-                    Mettre à jour
+                    Editer
                 </button>
             </div>
         </div>
