--- a/app/Resources/views/course_info/equipment/equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/equipment.html.twig
@@ -2,7 +2,7 @@
 
 {% block subContent %}
 
-    <div class="card my-2 shadow card-syllabus"
+    <div id="card-equipment" class="card my-2 shadow card-syllabus"
          data-view-url="{{ path('course_equipment_equipment_view', {'id': courseInfo.id }) }}"
     >
         <div class="card-header">
@@ -38,33 +38,6 @@
         $(document).ready(function () {
             $('#menu-resource').addClass('active');
             $('#menu-resource').addClass('border-bottom-3 border-white');
-
-            // add resource equipment
-            $(document).on('click', '#btn-add-equipment', function () {
-                let url = $(this).data('url');
-                $.ajax({
-                    url: url,
-                    method: "GET",
-                    dataType: "html",
-                    success: function (data) {
-                        console.log('good add ');
-                    }
-                });
-            });
-
-            // remove resource equipment
-            $(document).on('click', '#btn-remove-equipment', function () {
-                let url = $(this).data('url');
-                console.log(url);
-                $.ajax({
-                    url: url,
-                    method: "GET",
-                    dataType: "html",
-                    success: function (data) {
-                        console.log('good remove');
-                    }
-                });
-            })
         });
     </script>
 {% endblock %}
