--- a/app/Resources/views/course_info/equipment/form/resource_equipment_edit.html.twig
+++ b/app/Resources/views/course_info/equipment/form/resource_equipment_edit.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_equipment_equipment_add', {'idCourseInfo': form.vars.data.courseInfo.id, 'idEquipment': form.vars.data.equipment.id}), 'data-card': 'card-equipment'}}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_equipment_equipment_edit', {'idResourceEquipment': form.vars.data.id}), 'data-card': 'card-equipment'}}) }}
 <div class="card border-primary card-syllabus toggle-focus my-2 shadow active">
     {{ form_start(form, {'attr': {'class': 'form-focus'}}) }}
     <div class="card-header">
