--- a/app/Resources/views/structure/index.html.twig
+++ b/app/Resources/views/structure/index.html.twig
@@ -15,8 +15,11 @@
                 <div class="col-md-2 col-sm-6">
                     <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin_structure_index')  }}">Réinitialiser les filtres</a>
                 </div>
+                <input type="submit" style="position: absolute; left: -9999px"/>
+                <div class="col-md-6 col-sm-6">
+                    <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_structure_new')  }}">Ajouter une structure</a>
+                </div>
             </div>
-            <input type="submit" style="position: absolute; left: -9999px"/>
             {{ form_end(form) }}
         </div>
         <!-- /.card-header -->
