--- a/app/Resources/views/course_info/equipment/form/equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/form/equipment.html.twig
@@ -1,27 +1,20 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_equipment_equipment_add', {'idCourseInfo': form.vars.data.courseInfo.id, 'idEquipment': form.vars.data.equipment.id}), 'data-card': 'card-equipment'}}) }}
-<div class="card border-primary card-syllabus toggle-focus my-2 shadow active">
-    {{ form_start(form, {'attr': {'class': 'form-focus'}}) }}
-    <div class="card-header">
-        <div class="d-flex justify-content-between">
-            <h3>Ajout de matériel</h3>
-        </div>
-    </div>
-    <div class="card-body">
-        {{ form_errors(form) }}
-        <div class="mt-3">
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_equipment_equipment_add', {'id': form.vars.data.courseInfo.id, 'idEquipment': form.vars.data.equipment.id}), 'data-card': 'card-equipment'}}) }}
+{{ form_errors(form) }}
+<div class="row mt-3">
+    <div class="col">
+        <div>
             <div>
-                <label>Description</label>
                 {% if form.description is defined %}
                     {{ form_widget(form.description) }}
                 {% endif %}
             </div>
         </div>
-        <div class="d-flex justify-content-center mt-3">
-            <button type="submit" class="btn btn-primary rounded" id="create_button">
-                Ajouter
-            </button>
-        </div>
     </div>
-    {{ form_widget(form._token) }}
-    {{ form_end(form, {'render_rest': false }) }}
 </div>
+<div class="d-flex justify-content-center mt-3">
+    <button type="submit" class="btn btn-primary rounded" id="create_button">
+        Ajouter
+    </button>
+</div>
+{{ form_widget(form._token) }}
+{{ form_end(form, {'render_rest': false }) }}
