--- a/app/Resources/views/course_info/equipment/view/equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/view/equipment.html.twig
@@ -16,7 +16,8 @@
                         <td class="text-center">
                             <button type="button"
                                     class="btn btn-link modal-action button p-0"
-                                    data-action-url="{{ path('course_equipment_equipment_add', {'idCourseInfo': courseInfo.id, 'idEquipment': equipment.id}) }}">
+                                    data-action-title="Ajouter une description"
+                                    data-action-url="{{ path('course_equipment_equipment_add', {'id': courseInfo.id, 'idEquipment': equipment.id}) }}">
                                 <i class="fas fa-plus"></i>
                             </button>
                         </td>
@@ -53,7 +54,7 @@
                     <thead>
                     <tr>
                         <th class="text-left" style="width: 80%">Description</th>
-                        <th class="text-center" style="width: 20%">Supprimer</th>
+                        <th class="text-center" style="width: 20%">Modifier/Supprimer</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -67,14 +68,14 @@
                             <td class="text-center">
                                 <button type="button"
                                         class="btn btn-link modal-action p-0"
-                                        data-action-title="Modifier une description"
-                                        data-action-url="{{ path('course_equipment_equipment_edit', {'idResourceEquipment': ResourceEquipment.id}) }}">
+                                        data-action-title="Modifier une description de matériel"
+                                        data-action-url="{{ path('course_equipment_equipment_edit', {'id': ResourceEquipment.id}) }}">
                                     <i class="fas fa-edit"></i>
                                 </button>
                                 <button type="button"
                                         class="btn btn-link modal-action p-0"
                                         data-action-title="Supprimer un matériel"
-                                        data-action-url="{{ path('course_equipment_equipment_remove', {'idCourseInfo': courseInfo.id, 'idResourceEquipment': ResourceEquipment.id}) }}">
+                                        data-action-url="{{ path('course_equipment_equipment_remove', {'id': courseInfo.id, 'idResourceEquipment': ResourceEquipment.id}) }}">
                                     <i class="fas fa-trash-alt text-danger"></i>
                                 </button>
                             </td>
