--- a/app/Resources/views/course_info/objectives_course/form/edit_tutoring_resources.html.twig
+++ b/app/Resources/views/course_info/objectives_course/form/edit_tutoring_resources.html.twig
@@ -1,9 +1,10 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_equipment_equipment_edit', {'id': form.vars.data.id}), 'data-card': 'card-equipment'}}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('objective_course_edit_tutoring_resources', {'id': form.vars.data.id }), 'data-card': 'card-tutoring-resources'}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
     <div class="col">
         <div>
             <div>
+                <label>Si l'étudiant rencontre des difficultés, il peut…</label>
                 {% if form.description is defined %}
                     {{ form_widget(form.description) }}
                 {% endif %}
