--- a/app/Resources/views/course_info/objectives_course/view/achievement.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/achievement.html.twig
@@ -22,7 +22,7 @@
             <thead>
             <tr>
                 <th class="text-left" style="width: 80%">Description</th>
-                <th class="text-center" style="width: 20%">Supprimer</th>
+                <th class="text-center" style="width: 20%">Modifier/Supprimer</th>
             </tr>
             </thead>
             <tbody>
@@ -30,6 +30,12 @@
                 <tr>
                     <td class="text-left">{{ achievement.description }}</td>
                     <td class="text-center">
+                        <button type="button"
+                                class="btn btn-link modal-action p-0"
+                                data-action-title="Modifier une compétence"
+                                data-action-url="{{ path('objective_course_edit_achievement', {'id': achievement.id}) }}">
+                            <i class="fas fa-edit"></i>
+                        </button>
                         <button type="button" class="btn btn-link modal-action p-0"
                                 data-action-title="Supprimer une compétence"
                                 data-action-url="{{ path('objective_course_remove_achievement', {'id': courseInfo.id, 'achievementId': achievement.id}) }}">
