--- a/app/Resources/views/course_info/objectives_course/view/prerequisite.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/prerequisite.html.twig
@@ -23,7 +23,7 @@
                 <thead>
                 <tr>
                     <th class="text-left" style="width: 80%">Description</th>
-                    <th class="text-center" style="width: 20%">Supprimer</th>
+                    <th class="text-center" style="width: 20%">Modifier/Supprimer</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -31,6 +31,12 @@
                     <tr>
                         <td class="text-left">{{ prerequisite.description }}</td>
                         <td class="text-center">
+                            <button type="button"
+                                    class="btn btn-link modal-action p-0"
+                                    data-action-title="Modifier un prérequis"
+                                    data-action-url="{{ path('objective_course_edit_prerequisite', {'id': prerequisite.id}) }}">
+                                <i class="fas fa-edit"></i>
+                            </button>
                             <button type="button" class="btn btn-link modal-action p-0"
                                     data-action-title="Supprimer un prérequis"
                                     data-action-url="{{ path('objective_course_remove_prerequisite', {'id': courseInfo.id, 'prerequisiteId': prerequisite.id}) }}">
