--- a/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
@@ -23,13 +23,19 @@
             <thead>
             <tr>
                 <th class="text-left" style="width: 80%">Description</th>
-                <th class="text-center" style="width: 20%">Supprimer</th>
+                <th class="text-center" style="width: 20%">Modifier/Supprimer</th>
             </tr>
             </thead>
             {% for tutoringResources in courseInfo.courseTutoringResources %}
                 <tr class="text-center">
                     <td class="text-left">{{ tutoringResources.description }}</td>
                     <td class="text-center">
+                        <button type="button"
+                                class="btn btn-link modal-action p-0"
+                                data-action-title="Modifier une remédiation"
+                                data-action-url="{{ path('objective_course_edit_tutoring_resources', {'id': tutoringResources.id}) }}">
+                            <i class="fas fa-edit"></i>
+                        </button>
                         <button type="button" class="btn btn-link modal-action p-0"
                                 data-action-title="Supprimer une remédiation"
                                 data-action-url="{{ path('objective_course_remove_tutoring_resources', {'id': courseInfo.id, 'tutoringResourcesId': tutoringResources.id}) }}">
