bouton portail lms objective course

--- a/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
+++ b/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
@@ -15,6 +15,11 @@
                     Ajouter une compétence
                 </button>
             </div>
+            <a href="https://lms.univ-cotedazur.fr/course/view.php?id=22948"
+               class="btn btn-outline-info btn-sm btn-block mt-2"
+               target="_blank">
+                Cours dédié à l'« Approche par Compétences » (auto inscription)
+            </a>
         </div>
         <div class="card-body">
         </div>
