activities change + remove indexes

--- a/app/Resources/views/course_info/activities/activities.html.twig
+++ b/app/Resources/views/course_info/activities/activities.html.twig
@@ -31,51 +31,119 @@
             </div>
         </div>
         <div id="activity-content" class="bg-danger col-sm p-0" style="width: calc(100% - 250px); left: 250px">
-            <div class="activity-carousel">
-                <button class="activity-carousel-prev btn btn-link">
-                    <i class="fas fa-chevron-left"></i>
-                </button>
-                <div class="activity-carousel-items">
-                    <a href="#">
-                        <div class="activity-carousel-item text-center">
-                            <h3>Test2</h3>
-                            <h6>Test3</h6>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="activity-carousel-item text-center">
-                            <h3>Test2</h3>
-                            <h6>Test3</h6>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="activity-carousel-item text-center">
-                            <h3>Test2</h3>
-                            <h6>Test3</h6>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="activity-carousel-item text-center">
-                            <h3>Test2</h3>
-                            <h6>Test3</h6>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="activity-carousel-item text-center">
-                            <h3>Test2</h3>
-                            <h6>Test3</h6>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="activity-carousel-item text-center">
-                            <h3>Test2</h3>
-                            <h6>Test3</h6>
-                        </div>
-                    </a>
+
+            <div class="card">
+                <div class="card-header d-flex p-0">
+                    <h3 class="card-title p-3 text-black-50">Activités</h3>
+                    <ul class="nav nav-pills ml-auto p-2">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#tab_1" data-toggle="tab">Tab 1</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#tab_2" data-toggle="tab">Tab 2</a>
+                        </li>
+                    </ul>
                 </div>
-                <button class="activity-carousel-next btn btn-link">
-                    <i class="fas fa-chevron-right"></i>
-                </button>
+                <div class="card-body">
+                    <div class="tab-content">
+                        <div id="tab_1" class="tab-pane active">
+                            <div class="activity-carousel">
+                                <button class="activity-carousel-prev btn btn-link">
+                                    <i class="fas fa-chevron-left"></i>
+                                </button>
+                                <div class="activity-carousel-items">
+                                    <a href="#">
+                                        <div class="activity-carousel-item text-center">
+                                            <h3>Test1</h3>
+                                            <h6>Test2</h6>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="activity-carousel-item text-center">
+                                            <h3>Test1</h3>
+                                            <h6>Test2</h6>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="activity-carousel-item text-center">
+                                            <h3>Test1</h3>
+                                            <h6>Test2</h6>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="activity-carousel-item text-center">
+                                            <h3>Test1</h3>
+                                            <h6>Test2</h6>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="activity-carousel-item text-center">
+                                            <h3>Test1</h3>
+                                            <h6>Test2</h6>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="activity-carousel-item text-center">
+                                            <h3>Test1</h3>
+                                            <h6>Test2</h6>
+                                        </div>
+                                    </a>
+                                </div>
+                                <button class="activity-carousel-next btn btn-link">
+                                    <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div id="tab_2" class="tab-pane">
+                            <div class="activity-carousel">
+                                <button class="activity-carousel-prev btn btn-link">
+                                    <i class="fas fa-chevron-left"></i>
+                                </button>
+                                <div class="activity-carousel-items">
+                                    <a href="#">
+                                        <div class="activity-carousel-item text-center">
+                                            <h3>Test3</h3>
+                                            <h6>Test4</h6>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="activity-carousel-item text-center">
+                                            <h3>Test3</h3>
+                                            <h6>Test4</h6>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="activity-carousel-item text-center">
+                                            <h3>Test3</h3>
+                                            <h6>Test4</h6>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="activity-carousel-item text-center">
+                                            <h3>Test3</h3>
+                                            <h6>Test4</h6>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="activity-carousel-item text-center">
+                                            <h3>Test3</h3>
+                                            <h6>Test4</h6>
+                                        </div>
+                                    </a>
+                                    <a href="#">
+                                        <div class="activity-carousel-item text-center">
+                                            <h3>Test3</h3>
+                                            <h6>Test4</h6>
+                                        </div>
+                                    </a>
+                                </div>
+                                <button class="activity-carousel-next btn btn-link">
+                                    <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
